@@ -24,7 +24,7 @@
     </tr>
     <tr>
       <th>Latest Stable Release</th>
-      <td><a href="v4.0.8.html">v4.0.8</a></td>
+      <td><a href="v4.0.9.html">v4.0.9</a></td>
     </tr>
     <tr>
       <th>Master Download Site</th>
